chaged in #text-size font-size

--- a/boostrap.html
+++ b/boostrap.html
@@ -39,7 +39,7 @@
     <div class="container">
         <div class="row">
             <div class="col-8 text-center offset-2">
-<p class="fs-5 text text-uppercase" id="first-txt3">услуги</p>
+<p class="fs-5 text text-uppercase" id="first-txt3">Услуги</p>
 <h2 class="fw-600" id="second-txt3">Что мы предлагаем</h2>
              </div>
             </div>
