--- a/boostrap.html
+++ b/boostrap.html
@@ -14,7 +14,7 @@
 <div class="container">
     <div class="row">
         <div class="col text-center">
-            <h1 class="text-header fs-1">Крутое портофолио</h1>
+            <h1 class="text-header fs-1">Офигенное портофолио</h1>
         <p class="fs-6 fst-italic">Найдите интересные факты</p>
         <button type="button" class="btn btn-danger mt-3">Найти больше</button>
         </div>
